--- a/m1/w1/d4/assets/css/style.css
+++ b/m1/w1/d4/assets/css/style.css
@@ -1,15 +1,29 @@
 /* IMPOSTAZIONI GENERALI */
+body {
+    font-style: Poppins, sans-serif;
+    font-size: 1.5em;
+    line-height: 1.5;
+    padding: 13px;
+    background-image: url(../img/sfondo.png);
+    background-position: center;
+}
 
 /* HEADER */
 
+
 /* MAIN */
+
 
 /* ELEMENTI NEL MAIN - ARTICLE */
 
+
 /* TABELLE */
+
 
 /* FORM */
 
+
 /* ELEMENTI NELL' ASIDE */
+
 
 /* FOOTER */
