--- a/m1/w1/ps1/assets/css/style.css
+++ b/m1/w1/ps1/assets/css/style.css
@@ -5,6 +5,7 @@ body {
 	font-size: 1.2em;
 	line-height: 1.65;
 	text-align: center;
+
 }
 
 /* HEADER */
@@ -44,6 +45,7 @@ section {
 	padding-top: 3em;
     padding-right: 1.2em;
     padding-bottom: 2em;
+    padding-left: 1.2em;
 }
 
 #background {
@@ -76,6 +78,7 @@ section {
 }
 
 #notebook {
+    width: 100%;
     border-radius: 50%;
     margin-bottom: 1.5em;
 }
@@ -87,7 +90,7 @@ section {
 
 blockquote {
     font-style: italic;
-    font-size: 0.8em;
+    font-size: 0.9em;
     margin: 1.7em;
 }
 
@@ -96,5 +99,56 @@ cite {
 }
 
 #small {
+    font-size: 0.7em;
+}
+
+.box {
+	border-radius: 4px;
+	border: solid 1px #dee1e3;
+	margin-bottom: 2em;
+	padding-bottom: 1.5em;
+	font-size: 1rem
+}
+
+.box img {
+    display: inline-block;
+	width: 100%;
+    margin-bottom: 1em;
+}
+
+.box p {
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+/* FOOTER */
+footer {
+    padding: 2em 1em;
+    background-color: #25a2c3;
+    color: #c8e7f0;
+}
+
+footer i {
+    color: white;
+}
+
+footer a {
+    color: #c8e7f0;
+}
+
+footer ul li {
+    font-size: 1em;
+    list-style: none;
+}
+
+footer address {
+    margin-bottom: 1.6em;
+}
+
+#footer {
     font-size: 0.8em;
+    text-align: center;
+    padding-top: 2em;
+    border-top: 1px solid white;
+    display: inline-block;
 }
