--- a/m1/w2/ps2/assets/css/style.css
+++ b/m1/w2/ps2/assets/css/style.css
@@ -1,6 +1,6 @@
 #calculator {
     background-color: #4284e0;
-    border-radius: 15%;
+    border-radius: 50px;
     box-shadow: 6px 6px 4px #7e7e7e;
     height: 480px;
     width: 370px;
@@ -10,8 +10,8 @@
 
 #display {
     background-color: rgb(173, 212, 246);
-    box-shadow: 1px 2px rgb(46, 45, 45);
-    border: 1px solid black;
+    box-shadow: 1px 1.8px rgb(39, 38, 38);
+    border: 1.2px solid black;
     border-radius: 10px;
     color: black;
     font-family: Arial, Helvetica, sans-serif, sans-serif;
@@ -19,21 +19,19 @@
     text-align: right;
     height: 50px;
     width: 250px;
-    margin: 1.1em auto;
+    margin: 1.2em auto;
     padding: 0.2em;
 }
 
 #commands {
     display: inline-block;
-    height: 340px;
-    width: 300px;
     margin: 0.2em 2.4em;
 }
 
 .buttons {
     background-color: rgb(245, 81, 81);
-    box-shadow: 1px 2px rgb(46, 45, 45);
-    border-radius: 25%;
+    box-shadow: 1px 1.8px rgb(39, 38, 38);
+    border-radius: 15px;
     color: white;
     font-family: Arial, Helvetica, sans-serif, sans-serif;
     font-size: 1.6em;
