--- a/m1/w2/ps2/assets/css/style.css
+++ b/m1/w2/ps2/assets/css/style.css
@@ -21,7 +21,7 @@
     text-align: right;
     height: 50px;
     width: 250px;
-    margin: 1.2em auto;
+    margin: 1.2em 1.6em;
     padding: 0.2em;
 }
 
