--- a/m2/w1/d2/assets/css/style.css
+++ b/m2/w1/d2/assets/css/style.css
@@ -189,11 +189,19 @@ aside div {
     border: 1px solid #c3c3c3;
     margin-bottom: 1em;
     padding: 1em;
+    position: relative;
 }
 aside div p:last-child {
     margin-bottom: 0;
     font-size: 0.8em;
     text-align: right;
+}
+aside div .fa-tag {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    font-size: 2.5em;
+    opacity: 0.2;
 }
 
 /* FOOTER */
@@ -211,33 +219,37 @@ footer a {
 }
 
 /* BUTTONS */
-#social {
+.social {
     position: fixed;
-    bottom: 90px;
+    bottom: 116px;
     right: 1px;
 }
-#calendar {
+.calendar {
     position: fixed;
-    bottom: 50px;
+    bottom: 64px;
     right: 1px;
 }
-#top {
+.top {
     position: fixed;
-    bottom: 10px;
+    bottom: 12px;
     right: 1px;
 }
-#top a {
+.top a {
     color: #c76d9a;
-    font-size: 2.5em;
+    font-size: 2em;
     display: block;
 }
-#social a, #calendar a {
+.social a, .calendar a {
     color: #275eb0;
-    font-size: 2.5em;
+    font-size: 2em;
     display: block;
 }
-#social, #calendar, #top {
-    background-color: transparent;
+.social .far, .calendar .far, .top .far {
+    background: #ffffffa1;
+    backdrop-filter: blur(2px);
+    border: 3px solid white;
+    border-radius: 10px;
+    padding: 0.2em;
 }
 
 /* MEDIA QUERIES */
@@ -267,15 +279,20 @@ footer a {
         padding-top: 0.5em;
     }
 
-    #social {
-        bottom: 105px;
+    .social {
+        font-size: 1.1em;
+        top: 17px;
+        z-index: 2;
     }
 
-    #calendar {
-        bottom: 60px;
+    .calendar {
+        font-size: 1.1em;
+        top: 77px;
+        z-index: 2;
     }
 
-    #top {
+    .top {
+        font-size: 1.1em;
         bottom: 15px;
     }
 }
@@ -322,18 +339,8 @@ footer a {
         font-size: 0.9em;
     }
 
-    #social {
-        top: 15px;
-        z-index: 2;
-    }
-
-    #calendar {
-        top: 75px;
-        z-index: 2;
-    }
-
-    #top {
-        bottom: 15px;
+    .calendar {
+        top: 95px;
     }
 }
 
@@ -415,15 +422,9 @@ footer a {
         margin-inline: -0.1em;
     }
     
-    #social {
-        right: 5px;
-    }
-    #calendar {
-        top: 80px;
-        right: 5px;
-    }
-    #top {
-        right: 5px;
+    .calendar {
+        top: 105px;
+
     }
 }
 
