--- a/m1/w1/d4/assets/css/style.css
+++ b/m1/w1/d4/assets/css/style.css
@@ -1,6 +1,6 @@
 /* IMPOSTAZIONI GENERALI */
 body {
-    font-style: Poppins, sans-serif;
+    font-style: "Poppins", sans-serif;
     font-size: 1.3em;
     line-height: 1.5;
     padding: 13px;
