--- a/m1/w1/d3/assets/css/style.css
+++ b/m1/w1/d3/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Poppins, sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 0.7em;
     line-height: 1.5em;
 }
