--- a/m2/w1/d1/assets/css/style.css
+++ b/m2/w1/d1/assets/css/style.css
@@ -1,7 +1,7 @@
 /* IMPOSTAZIONI GENERALI */
 html {font-size: 62.5%;}
 body { 
-    font-family: Poppins, 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', 'Helvetica Neue', sans-serif;
     font-size: 1.4rem;
     line-height: 1.5;
     padding: 15px;
