--- a/m2/w2/d3/assets/scss/style.css
+++ b/m2/w2/d3/assets/scss/style.css
@@ -2,7 +2,6 @@ button {
   padding: 30px;
   color: white;
 }
-
 button:hover {
   transform: scale(1.2);
 }
@@ -11,26 +10,22 @@ body {
   background-color: #5b17bd;
 }
 
-.head nav {
+.header1 nav {
   display: flex;
   justify-content: space-between;
 }
-
-.head nav p {
+.header1 nav p {
   font-size: 50px;
 }
-
-.head nav ul {
+.header1 nav ul {
   display: flex;
 }
-
-.head nav ul li {
+.header1 nav ul li {
   padding: 50px;
   color: white;
   list-style: none;
 }
-
-.head nav ul li:hover {
+.header1 nav ul li:hover {
   color: #ef8d34;
 }
 
@@ -39,22 +34,16 @@ body {
   justify-content: center;
   margin: 0 auto;
 }
-
 .container .text {
   padding: 20px;
 }
-
 .container #blue {
   background-color: #316af6;
 }
-
 .container #orange {
   background-color: #ef8d34;
 }
-
 .container img {
   height: 300px;
   width: 500px;
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=style.css.map */
